V17 con ngx para graficas

--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -201,7 +201,7 @@
                       <tr>
                         <td>1</td>
                         <th>Victor Pineda</th>
-                        <td>v.pineda@bim.mx</td>
+                        <td>v.pineda&#64;bim.mx</td>
                         <td>Medios de Pago</td>
                         <td>Subdirector</td>
                         <td>Activo</td>
@@ -214,7 +214,7 @@
                       <tr>
                         <td>2</td>
                         <th>Luis Lozano</th>
-                        <td>l.lozano@bim.mx</td>
+                        <td>l.lozano&#64;bim.mx</td>
                         <td>Medios de Pago</td>
                         <td>Gerente</td>
                         <td>Activo</td>
@@ -227,7 +227,7 @@
                       <tr>
                         <td>3</td>
                         <th>Marco Ruiz</th>
-                        <td>m.ruiz@bim.mx</td>
+                        <td>m.ruiz&#64;bim.mx</td>
                         <td>Individual BIM</td>
                         <td>Gerente</td>
                         <td>Activo</td>
@@ -240,7 +240,7 @@
                       <tr [ngClass]="{'disabled': !usrActivo}">
                         <td>4</td>
                         <th>Carlos Pulido</th>
-                        <td>c.pulido@bim.mx</td>
+                        <td>c.pulido&#64;bim.mx</td>
                         <td>Medios de Pago</td>
                         <td>Desarrollador</td>
                         <td>Desactivado</td>
