inicio de grafica

--- a/src/app/reportes/reportes.component.html
+++ b/src/app/reportes/reportes.component.html
@@ -110,6 +110,7 @@
                     <button type="button" class="btn btn-success" (click)="showProyectos()">Proyectos</button>
                     <button type="button" class="btn btn-success mx-2" (click)="showTickets()">Tickets</button>
                     <button type="button" class="btn btn-success" (click)="showReportes()">Resumen general</button>
+                    <button type="button" class="btn btn-success mx-2" (click)="showGrafica()">Gráficas</button>
                   </div>
                   <!-- Tabla Proyectos -->
                   <div class="row mt-2" *ngIf="proyectos == true">
@@ -421,6 +422,29 @@
                           </tbody>
                         </table>
                       </div>
+                    </div>
+                  </div>
+                  <div class="row mt-2"  *ngIf="grafica == true">
+                    <h6 class="">Gráficas</h6>
+                    <div class="col-6">
+                      <h6 class="mt-5">Proyectos</h6>
+                      <ngx-charts-polar-chart class="border border-1"
+                      [view]="view"
+                      [xAxis]="xAxis"
+                      [yAxis]="yAxis"
+                      [results]="multi"
+                      >
+                      </ngx-charts-polar-chart>
+                    </div>
+                    <div class="col-6">
+                      <h6 class="mt-5">Tickets</h6>
+                      <ngx-charts-polar-chart
+                      [view]="view"
+                      [xAxis]="xAxis"
+                      [yAxis]="yAxis"
+                      [results]="multidos"
+                      >
+                      </ngx-charts-polar-chart>
                     </div>
                   </div>
                 </div>
