--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -472,7 +472,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6"  *ngIf="usuarios">
                       <div class="card">
                         <div class="card-body">
                           <div class="row">
