--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<div class="row" hidden>
+<div class="row">
   <div class="col-12 mb-5">
       <div class="card">
           <div class="card-body">
