--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -206,7 +206,7 @@
                         <td>Subdirector</td>
                         <td>Activo</td>
                         <td>
-                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalEditar">
                             ...
                           </button>
                         </td>
@@ -219,7 +219,7 @@
                         <td>Gerente</td>
                         <td>Activo</td>
                         <td>
-                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalEditar">
                             ...
                           </button>
                         </td>
@@ -232,7 +232,7 @@
                         <td>Gerente</td>
                         <td>Activo</td>
                         <td>
-                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalEditar">
                             ...
                           </button>
                         </td>
@@ -245,7 +245,7 @@
                         <td>Desarrollador</td>
                         <td>Desactivado</td>
                         <td>
-                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalComentariosGerencia">
+                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalEditar">
                             ...
                           </button>
                         </td>
