--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -206,7 +206,7 @@
                         <td>Subdirector</td>
                         <td>Activo</td>
                         <td>
-                          <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#exampleModalEditar">
+                          <button class="btn btn-sm btn-primary" (click)="clickEditar('Usuario', [])" data-toggle="modal" data-target="#exampleModalEditar">
                             ...
                           </button>
                         </td>
