--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -617,26 +617,26 @@
 <!-- Modal Agregar Tarea-->
 <div class="modal fade" id="exampleModalAddTarea" style="height: 420px;"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document" >
-        <div _ngcontent-fhe-c21="" class="modal-content">
-            <div _ngcontent-fhe-c21="" class="modal-header">
-                <h5 _ngcontent-fhe-c21="" id="exampleModalLabel" class="modal-title">Agregar Tarea</h5>
-                <button _ngcontent-fhe-c21="" type="button" data-dismiss="modal" aria-label="Close" class="close border">
-                    <span _ngcontent-fhe-c21="" aria-hidden="true">×</span>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="exampleModalLabel" class="modal-title">Agregar Tarea</h5>
+                <button type="button" data-dismiss="modal" aria-label="Close" class="close border">
+                    <span aria-hidden="true">×</span>
                 </button>
             </div>
-            <div _ngcontent-fhe-c21="" class="modal-body" style="overflow-x: hidden; overflow-y: auto;  height: 60em;">
-                <br _ngcontent-fhe-c21="">
-                <div _ngcontent-fhe-c21="">
+            <div class="modal-body" style="overflow-x: hidden; overflow-y: auto;  height: 60em;">
+                <br>
+                <div>
                     <!-- Comentarios -->
-                    <div _ngcontent-fhe-c21="" class="row mt-6">
-                        <div _ngcontent-fhe-c21="" class="col-12">
-                            <div _ngcontent-fhe-c21="" class="card">
-                                <div _ngcontent-fhe-c21="" class="card-body">
-                                    <h6 _ngcontent-fhe-c21="" class="card-title">Descripción:</h6>
-                                    <div _ngcontent-fhe-c21="" class="row">
-                                        <div _ngcontent-fhe-c21="" class="col-12">
-                                            <div _ngcontent-fhe-c21="" class="form-floating">
-                                                <textarea _ngcontent-fhe-c21="" type="text" id="idDatasource" placeholder="ID" value="1"
+                    <div class="row mt-6">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h6 class="card-title">Descripción:</h6>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="form-floating">
+                                                <textarea type="text" id="idDatasource" placeholder="ID" value="1"
                                                     class="form-control ng-valid ng-dirty ng-touched" style="height: 120px;">
                                                 </textarea>
                                             </div>
@@ -646,35 +646,7 @@
                             </div>
                         </div>
                     </div>
-                    <br _ngcontent-fhe-c21="">
-                </div>
-                <button _ngcontent-fhe-c21="" type="button" data-dismiss="modal" class="btn btn-secondary">
-                    Cerrar
-                </button>
-                <button _ngcontent-fhe-c21="" type="button" class="btn btn-primary mx-2">
-                    Guardar Tarea
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Modal Confirmación-->
-<div class="modal fade" id="exampleConfirmacion" style="height: 420px;"  tabindex="-1" role="dialog" aria-labelledby="exampleConfirmacion" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document" >
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 id="exampleModalLabel" class="modal-title">Confirmación de Cierre de Semana</h5>
-                <button type="button" data-dismiss="modal" aria-label="Close" class="close border">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body" hidden>
-                <br>
-                <div class="col-12 text-center">
-                    <span>
-                        ¿Estás seguro de hacer el cierre de semana?
-                    </span>
-                    
+                    <br>
                 </div>
                 <button type="button" data-dismiss="modal" class="btn btn-secondary">
                     Cerrar
@@ -686,6 +658,41 @@
         </div>
     </div>
 </div>
+<!-- Modal Confirmación-->
+<div class="modal fade  ms-auto" id="exampleConfirmacion"  tabindex="-1" role="dialog" aria-labelledby="exampleConfirmacion" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document" >
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 id="exampleModalLabel" class="modal-title">Confirmación de Cierre de Semana</h5>
+                <button type="button" data-dismiss="modal" aria-label="Close" class="close border">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body border">
+                <br>
+                <div class="col-12 text-center mb-2">
+                    <span>
+                        ¿Estás seguro de hacer el cierre de semana?
+                    </span>
+                </div>
+                <div class="mb-5">
+                    <span>
+                        Al cerrar la semana, no se podrá hacer cambios hasta el inicio del próximo periodo de evaluación
+                    </span>
+                </div>
+            </div>
+            <div class="">
+                <button type="button" data-dismiss="modal" class="btn btn-secondary">
+                    Cerrar
+                </button>
+                <button type="button" class="btn btn-primary mx-2">
+                    Confirmar Cierre de Semana
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 <style>
