--- a/src/app/configuracion/config.component.html
+++ b/src/app/configuracion/config.component.html
@@ -37,6 +37,10 @@
                       <div class="col-2">
                         <div class="form-floating">
                           <select class="form-select" id="gerenciaUsuarios"name="gerenciaUsuarios">
+                            <option value="" selected disabled>Seleccione una opción</option>
+                            <option value="" *ngFor="let gerencia of listaGerencia">
+                              {{ gerencia.gerencia }}
+                            </option>
                             <!--<option *ngFor="let tipoDoc of listatipoDocumentacion" [ngValue]="tipoDoc.idDocumentacion">
                             {{ tipoDoc.documentacion | uppercase }}
                             </option>-->
@@ -324,7 +328,7 @@
                       <tr>
                         <th scope="col">Dependencia</th>
                         <th scope="col">Estatus</th>
-                        <th hidden scope="col">Editar</th>
+                        <th scope="col">Editar</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -332,7 +336,7 @@
                         <th class="">{{ dependencia.tipoDependencia }}</th>
                         <td class="">{{ dependencia.status }}</td>
                         <td class="">
-                          <button hidden class="btn btn-sm btn-primary" (click)="clickEditar('Dependencias', listaDependencia[i])" data-toggle="modal" data-target="#exampleModalEditar">
+                          <button  class="btn btn-sm btn-primary" (click)="clickEditar('Dependencias', listaDependencia[i])" data-toggle="modal" data-target="#exampleModalEditar">
                           ...
                           </button>
                         </td>
